# ZecKit_m3

./: README.md  action.yml  docker-compose.ghcr.yml  docker-compose.yml
.github/actions/zeckit-e2e/: README.md  action.yml
.github/workflows/: build-images.yml  e2e-ghcr.yml  e2e-test.yml  golden-e2e.yml  smoke-test.yml  test-action.yml
cli/: Cargo.toml
cli/fixtures/: unified-addresses.json
cli/src/: main.rs
cli/src/commands/: test.rs  up.rs
cli/src/docker/: compose.rs  health.rs
docker/configs/: zcash.conf  zebra.toml  zebra.toml.bak  zindexer.toml
docker/healthchecks/: check-services.sh
docker/lightwalletd/: Dockerfile
docker/zaino/: Dockerfile  entrypoint.sh
docker/zebra/: Dockerfile  entrypoint.sh
docker/zingo/: Dockerfile  entrypoint.sh
examples/: github-action-usage.yml
faucet/: Dockerfile
faucet/app/: __init__.py  config.py  main.py  ua_fixtures.py  wallet.py
faucet/app/routes/: __init__.py  faucet.py  stats.py
fixtures/: unified-addresses.json
scripts/: fund-faucet.sh  golden-flow.sh  mine-blocks.py  mine-regtest.py
specs/: acceptance-tests.md  architecture.md  technical-spec.md
tests/smoke/: basic-health.sh
zeckit-faucet/: Cargo.toml
